correction mobile vers

--- a/src/scss/blocks/_home.sass
+++ b/src/scss/blocks/_home.sass
@@ -109,6 +109,11 @@
                 line-height: 32px
                 font-family: var(--main-font)
                 border-radius: 6px
+                transition: .3s linear
+
+                &:hover
+                    transition: .3s linear
+                    background: var(--main)
                 @media screen and ( max-width: 599px )
                     font-size: 14px
                 @media screen and ( max-width: 399px )
@@ -133,7 +138,7 @@
             height: 480px
             background-position: 100% 100%
         @media screen and ( max-width: 340px )
-            width: 220px
+            width: 260px
         img
             position: absolute
             top: 0
